connect to the database

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon api/index.js",
-    "start":"node api/index.js"
-
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.3",
     "nodemon": "^3.1.4"
   }
 }
